Draft: Use dedicated exceptions instead of generic ApplicationException